re2c/cmd_split.re2c
/*
cmd_split.re2c - Command string parsing
Copyright (C) 2020  Mr0maks <mr.maks0443@gmail.com>

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <https://www.gnu.org/licenses/>.
*/

#include <stdint.h>
#include <string.h>
#include <assert.h>

// re2 >= 1.2
// re2c -8 re2c/cmd_split.re2c --input-encoding utf8 --tags -o src/cmd_split.c

/*!max:re2c*/

static void cmd_split_push(uint8_t *start, uint8_t *end, char *tokens[], int position )
{
    *end = '\0';
    tokens[position] = (char *)start;
}

int cmd_split(unsigned char *str, char *tokens[])
{
assert(str);
assert(tokens);

int tokens_count = 0;
uint8_t *YYMARKER = NULL;
uint8_t *YYLIMIT = (str + strlen((char*)str));
uint8_t *t1, *t2;
/*!stags:re2c format = 'uint8_t *@@;'; */
loop:
/*!re2c
re2c:define:YYCTYPE = uint8_t;
re2c:define:YYCURSOR = str;
re2c:yyfill:enable = 0;
re2c:eof = 0;

$ { goto end; }

whitespace = [ \n\t\v\f]+;
token = [^ \n\t\v\f]+;

@t1 token @t2 whitespace? { cmd_split_push(t1, t2, tokens, tokens_count++ ); goto loop; }
*/
end:
    return tokens_count;
}
